vlib/v/checker/tests/array_insert_type_mismatch_b.vv
fn main() {
	mut a := [1, 2]
	a.insert(1, 'abc')
	println(a)
}
